--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Simple page builder</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.23.2/js/medium-editor.min.js"></script>
+    <script src="http://mkawczynski07.github.io/medium-editor-list/medium-editor-list.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -12,29 +14,32 @@
             <div class="col-md-12 remove">Remove zone</div>
         </div>
         <div class="row">
-            <div class="col-md-8 one">
+            <div class="col-md-9 one">
                 <div id="drag"></div>
             </div>
-            <div id="two" class="col-md-4 two">
+            <div id="presets" class="col-md-3 presets">
                 <div class="bg row">
-                    <div class="bg col-md-6">1/2</div>
-                    <div class="bg col-md-6">1/2</div>
+                    <div class="bg col-md-12 editor">1</div>
+                </div>
+                <div class="bg row">
+                    <div class="bg col-md-6 editor">1/2</div>
+                    <div class="bg col-md-6 editor">1/2</div>
                 </div>
                 <div class="bg row">
                     <div class="bg col-md-4">1/3</div>
-                    <div class="bg col-md-4">1/3</div>
-                    <div class="bg col-md-4">1/3</div>
+                    <div class="bg col-md-4 editor">1/3</div>
+                    <div class="bg col-md-4 editor">1/3</div>
                 </div>
                 <div class="bg row">
-                    <div class="bg col-md-3">1/4</div>
-                    <div class="bg col-md-3">1/4</div>
-                    <div class="bg col-md-3">1/4</div>
-                    <div class="bg col-md-3">1/4</div>
+                    <div class="bg col-md-3 editor">1/4</div>
+                    <div class="bg col-md-3 editor">1/4</div>
+                    <div class="bg col-md-3 editor">1/4</div>
+                    <div class="bg col-md-3 editor">1/4</div>
                 </div>
                 <div class="bg row">
-                    <div class="bg col-md-3">1/4</div>
-                    <div class="bg col-md-6">1/2</div>
-                    <div class="bg col-md-3">1/4</div>
+                    <div class="bg col-md-3 editor">1/4</div>
+                    <div class="bg col-md-6 editor">1/2</div>
+                    <div class="bg col-md-3 editor">1/4</div>
                 </div>
             </div>
         </div>
@@ -42,20 +47,30 @@
 
 
 <script>
-    dragula([document.getElementById('drag'), document.getElementById('two')], {
+    dragula([document.getElementById('drag'), document.getElementById('presets')], {
       copy: function (el, source) {
-        return source === document.getElementById('two')
+        return source === document.getElementById('presets')
       },
       accepts: function (el, target) {
         return target !== document.getElementById('drop')
       },
       removeOnSpill: true
-    })
+    });
+
+    $('#drag').bind("DOMSubtreeModified",function(){
+        var editor = new MediumEditor('#drag .editor', {
+            toolbar: {
+                buttons: ['bold', 'italic', 'underline', 'h2', 'h3', 'justifyLeft', 'justifyCenter', 'justifyRight', 'justifyFull', 'image', 'html', 'removeFormat']
+            },
+        });
+    });
 
 
 </script>
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.23.2/css/medium-editor.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.23.2/css/themes/flat.css">
 </body>
 </html>
