--- a/index.html
+++ b/index.html
@@ -9,58 +9,106 @@
     <script src="http://mkawczynski07.github.io/medium-editor-list/medium-editor-list.js"></script>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12 remove">Remove zone</div>
-        </div>
-        <div class="row">
-            <div class="col-md-9 one">
-                <div id="drag"></div>
-            </div>
-            <div id="presets" class="col-md-3 presets">
-                <div class="bg row">
-                    <div class="bg col-md-12 editor">1</div>
-                </div>
-                <div class="bg row">
-                    <div class="bg col-md-6 editor">1/2</div>
-                    <div class="bg col-md-6 editor">1/2</div>
-                </div>
-                <div class="bg row">
-                    <div class="bg col-md-4">1/3</div>
-                    <div class="bg col-md-4 editor">1/3</div>
-                    <div class="bg col-md-4 editor">1/3</div>
-                </div>
-                <div class="bg row">
-                    <div class="bg col-md-3 editor">1/4</div>
-                    <div class="bg col-md-3 editor">1/4</div>
-                    <div class="bg col-md-3 editor">1/4</div>
-                    <div class="bg col-md-3 editor">1/4</div>
-                </div>
-                <div class="bg row">
-                    <div class="bg col-md-3 editor">1/4</div>
-                    <div class="bg col-md-6 editor">1/2</div>
-                    <div class="bg col-md-3 editor">1/4</div>
+    <div class="remove">Remove zone</div>
+    
+            <div class="one">
+                <div class="container-fluid">
+                    <div id="drag"></div>
                 </div>
             </div>
-        </div>
+
+            <div class="presets">
+                <div class="container-fluid" id="presets">
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-12 editor">1</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-6 editor">1/2</div>
+                            <div class="bg col-md-6 editor">1/2</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-4 editor">1/3</div>
+                            <div class="bg col-md-4 editor">1/3</div>
+                            <div class="bg col-md-4 editor">1/3</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-3 editor">1/4</div>
+                            <div class="bg col-md-3 editor">1/4</div>
+                            <div class="bg col-md-3 editor">1/4</div>
+                            <div class="bg col-md-3 editor">1/4</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-3 editor">1/4</div>
+                            <div class="bg col-md-6 editor">1/2</div>
+                            <div class="bg col-md-3 editor">1/4</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-offset-4 col-md-4 editor">1/3</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-offset-3 col-md-6 editor">1/2</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-offset-2 col-md-8 editor">2/3</div>
+                        </div>
+                    </div>
+                    <div class="after">
+                        <div class="bg row">
+                            <div class="bg col-md-offset-1 col-md-5 editor">5/12</div>
+                            <div class="bg col-md-5 editor">5/12</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
     </div>
 
 
 <script>
-    dragula([document.getElementById('drag'), document.getElementById('presets')], {
-      copy: function (el, source) {
-        return source === document.getElementById('presets')
-      },
-      accepts: function (el, target) {
-        return target !== document.getElementById('drop')
-      },
-      removeOnSpill: true
+
+    var drake = dragula({
+        containers: [document.getElementById('drag'), document.getElementById('presets')],
+        copy: function (el, source) {
+            return source === document.getElementById('presets')
+        },
+        accepts: function (el, target) {
+            return target !== document.getElementById('drop')
+        },
+        removeOnSpill: true
     });
 
-    $('#drag').bind("DOMSubtreeModified",function(){
+    drake.on('dragend', function(){
         var editor = new MediumEditor('#drag .editor', {
             toolbar: {
-                buttons: ['bold', 'italic', 'underline', 'h2', 'h3', 'justifyLeft', 'justifyCenter', 'justifyRight', 'justifyFull', 'image', 'html', 'removeFormat']
+                buttons: [
+                    'bold',
+                    'italic',
+                    'underline',
+                    'h2',
+                    'h3',
+                    'justifyLeft',
+                    'justifyCenter',
+                    'justifyRight',
+                    'justifyFull',
+                    'image',
+                    'html',
+                    'removeFormat'
+                ]
             },
         });
     });
